# studious

./: Cargo.toml  index.html
assets/: matchings_and_factors.toml
pkg/: studious.js  studious_bg.wasm
src/: lib.rs  loading.rs  main.rs
src/message/: mod.rs
src/state/: mod.rs
src/update/: mod.rs
src/view/: mod.rs
