[package]
name = "studious"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
iced = "0.8.0"
serde = { version = "1.0.153", features = ["serde_derive"] }
toml = "0.7.2"
wasm-bindgen = "0.2.84"